# napkin

./: Cargo.toml  Pair.ron  README.md  notes.txt  output.txt
napkins/: analysis.napkin  functions.napkin  glib.napkin  test.napkin  test01.napkin  test_factorial.napkin
notes/: grammar.txt  notes.txt
outputs/: test01.txt
src/: analyzer.rs  ast.rs  cli.rs  errors.rs  evaluator.rs  main.rs  napkin.pest  parser.rs
