[package]
name = "napkin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2.5"
pest_derive = "^2.5"
lazy_static = "^1.4"
# eyre = "^0.6"
# factorial = "^0.3"
anyhow = "1.0"
thiserror = "1.0"

# clap = { version = "^4.0", features = ["derive"] }
# rustyline = "^10.0"